--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=AHMED-ALTALI\\SQLEXPRESS2014;Initial Catalog=ecommerce-app-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "AllowedHosts": "*"
 }
